--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                 </div>
                 <div class="hero-image loading">
                     <div class="profile-card">
-                        <img src="picture.jpg" alt="Samuel Chrisdian" class="profile-img">
+                        <img src="picture.JPG" alt="Samuel Chrisdian" class="profile-img">
                         <div class="social-links">
                             <a href="https://linkedin.com/in/samuelchrisdian" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
